# aic_pico

./: .gitignore  README.md  README_CN.md
Configurator/: index.html
PCB/: aic_pico.kicad_pcb  aic_pico.kicad_prl  aic_pico.kicad_pro  aic_pico.kicad_sch  aic_pico.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
PCB/3dmodels/: User Library-RGB1204.STEP
PCB/Key/: aic_key.kicad_pcb  aic_key.kicad_prl  aic_key.kicad_pro  aic_key.kicad_sch  fp-info-cache  fp-lib-table
PCB/Key_PN5180/: aic_pico_pn5180.kicad_pcb  aic_pico_pn5180.kicad_prl  aic_pico_pn5180.kicad_pro  aic_pico_pn5180.kicad_sch  fp-info-cache  fp-lib-table
PCB/Key_PN532/: aic_key_pn532.kicad_pcb  aic_key_pn532.kicad_prl  aic_key_pn532.kicad_pro  aic_key_pn532.kicad_sch  fp-info-cache  sym-lib-table
PCB/Lib/: aic_pico.kicad_sym
PCB/Lib/3dmodels/: FPC0.5MM1.0H18P.step  SKRRABE010.stp  SKSTAAE010.stp  pn5180.step
PCB/Lib/aic_pico.pretty/: ANT_2P.kicad_mod  ANT_3P.kicad_mod  FPC-0.5-1.0H-18P.kicad_mod  RPi_Pico_SMD_No_USB.kicad_mod  SKRR.kicad_mod  Solder_3P.kicad_mod  WS2812B-1204.kicad_mod  WS2812B-2835.kicad_mod  WS2812B-4020.kicad_mod  WS2812C-2020.kicad_mod  pn5180_conn.kicad_mod  pn532_conn.kicad_mod
PCB/Touch/: aic_touch.kicad_pcb  aic_touch.kicad_prl  aic_touch.kicad_pro  aic_touch.kicad_sch  fp-info-cache  sym-lib-table  ~aic_touch.kicad_sch.lck
PCB/aic_pico.pretty/: ANT_2P.kicad_mod  RPi_Pico_SMD_No_USB.kicad_mod  SKRR.kicad_mod  SKSTAAE010.kicad_mod  WS2812B-1204.kicad_mod  pn5180_conn.kicad_mod
Production/3DPrint/: aic_key_bottom.stl  aic_key_top.stl  aic_key_top_ams.3mf  aic_key_top_nokey.stl  aic_key_top_nokey_ams.3mf  aic_key_top_surface.stl  aic_key_top_surface_ams.3mf  aic_key_top_tact.stl  aic_key_top_tact_ams.3mf  aic_key_top_tall.stl  aic_key_top_tall_ams.3mf  aic_pico_bottom.stl  aic_pico_top.stl  aic_pico_top.stl.stl  aic_pico_top_ams.3mf  aic_pico_top_tall.stl  aic_pico_top_tall_ams.3mf  aic_pico_top_with_logo.3mf  aic_touch_bottom.stl  aic_touch_top.3mf  aic_touch_top.stl  aic_touch_top_ams.3mf
Production/Firmware/: aic_pico.uf2  aic_pico_rp2350.uf2
doc/: aic_pico_pn5180.fzz  aic_pico_pn532.fzz
firmware/: CMakeLists.txt  aic_pico.uf2
firmware/include/: aime.h  bana.h  mode.h  nfc.h
firmware/src/: CMakeLists.txt  aime.c  aime.h  anima.c  anima.h  bg_anima.h  board_defs.h  button_ani.h  cardio.c  cardio.h  cli.c  cli.h  commands.c  commands.h  config.c  config.h  conthrax.h  cst816t.c  cst816t.h  gfx.c  gfx.h  glow_ani.h  gui.c  gui.h  images.h  keypad.c  keypad.h  light.c  light.h  light_ani.h  lis3dh.c  lis3dh.h  ltsaeada.h  lvgl_font.h  main.c  nfc.c  nfc.h  pn5180.c  pn5180.h  pn532.c  (+14 more)
firmware/src/lib/: aime.c  bana.c  mode.c  nfc.c  pn5180.c  pn5180.h  pn532.c  pn532.h  records.txt  spad0.c  spad0.h
firmware/src/res/: anima_glow.h  anima_light.h  anima_star.h  font_conthrax.h  font_dejavu.h  font_ltsaeada.h  font_upheaval.h  image_aic_bana.h  image_aic_generic.h  image_aic_konami.h  image_aic_nesica.h  image_aic_sega.h  image_aime.h  image_aime_reader.h  image_bana.h  image_bana_reader.h  image_eamuse.h  image_mifare.h  image_nesica.h  image_suica.h  image_vicinity.h  resource.h
firmware/src/tools/: conv.c
firmware/tools/: anima_conv.c  conv.c  image_conv.c
res/: aime.psd  bana_face.xcf
